#
# cppan
#

################################################################################

########################################
# autotools
########################################

set(src
    autotools.cpp
    autotools.h
)
add_library(autotools ${src})
target_link_libraries(autotools common)

################################################################################
